# Spine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
doc/: ARCHITECTURE.md  Foundation.md  claude.md  spine-spec.md
examples/: minimal_agent.py
skills/: README.md
skills/lines/: README.md  count.py
src/spine/: __init__.py  agent.py  hooks.py  provider.py  skills.py
src/spine/prompts/: system.md
src/spine/tools/: __init__.py  base.py  bash.py  edit.py  read.py  write.py
tests/: test_loop.py  test_tools.py
